Fix issue where resource UI elements come too close together

--- a/css/game.css
+++ b/css/game.css
@@ -1,8 +1,15 @@
 .game {
 	margin: 0;
-	padding: 0 8px;
 	height: 100%;
 	color: #fff;
+}
+
+.game .country {
+	margin: 0 8px;
+}
+
+.game .economy {
+	margin: 0 8px;
 }
 
 .game .country img {
@@ -46,7 +53,7 @@
 	height: 96px;
 	display: inline-block;
 	border-radius: 50%;
-	margin-right: 8px;
+	margin: 0 8px;
 	vertical-align: top;
 	position: relative;
 	flex: 0 0 auto;
@@ -86,6 +93,7 @@
 	display: inline-block;
 	position: relative;
 	flex: 1 1 auto;
+	margin-right: 8px;
 }
 
 .game .resource .cutout-top {
